Use random instead of pylab

--- a/Chord Generator 1-25-21.ipynb
+++ b/Chord Generator 1-25-21.ipynb
@@ -6,34 +6,24 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "Pick an option: chromatic or diatonic? chromatic\n",
-      "Would you like to chords to be given a specific key? Yes or no: yes\n",
-      "Would you like to select your own key? Yes or no: yes\n",
-      "Type the letter name of your chosen key. Options: C, Db, D, Eb, E, F, F#, G, Ab, A, Bb, B. F\n",
-      "Pick an option: short or long? long\n",
       "\n",
-      "Your key: F major\n",
-      "I-------------- F\n",
-      "V/bII---------- Db\n",
-      "bIIM11--------- GbM11\n",
-      "vii------------ Edim\n",
-      "I-------------- F\n",
-      "IIIsus4-------- Asus4\n",
-      "bIII----------- Ab\n",
-      "vi------------- Dm\n",
-      "bIIM7---------- GbM7\n",
-      "V7(b9)--------- C7(b9)\n",
-      "IM11----------- FM11\n"
+      "Your key: Db major\n",
+      "I-------------- Db\n",
+      "V7(b9)/iii----- C7(b9)\n",
+      "IIIM11--------- FM11\n",
+      "IV7------------ Gb7\n",
+      "V9------------- Ab9\n",
+      "Isus4---------- Dbsus4\n"
      ]
     }
    ],
    "source": [
     "#Version 7: adds chromatic vs. diatonic option. Chromatic option only gives major keys for now.\n",
+    "from random import randint\n",
     "\n",
-    "from pylab import *\n",
     "from playsound import playsound\n",
     "\n",
     "ASSETS_FOLDER = \"./assets\"\n",
@@ -713,7 +703,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.5-final"
   }
  },
  "nbformat": 4,
