Use pylab instead of random.randint

--- a/Chord Generator 1-25-21.ipynb
+++ b/Chord Generator 1-25-21.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -12,17 +12,18 @@
       "\n",
       "Your key: Db major\n",
       "I-------------- Db\n",
-      "V7(b9)/iii----- C7(b9)\n",
-      "IIIM11--------- FM11\n",
-      "IV7------------ Gb7\n",
-      "V9------------- Ab9\n",
-      "Isus4---------- Dbsus4\n"
+      "V-------------- Ab\n",
+      "I-------------- Db\n",
+      "iv9------------ Gbm9\n",
+      "bII------------ Dnat\n",
+      "V-------------- Ab\n",
+      "Isus2---------- Dbsus2\n"
      ]
     }
    ],
    "source": [
     "#Version 7: adds chromatic vs. diatonic option. Chromatic option only gives major keys for now.\n",
-    "from random import randint\n",
+    "from pylab import randint\n",
     "\n",
     "from playsound import playsound\n",
     "\n",
