Add playback for diatonic keys

--- a/Chord Generator 1-25-21.ipynb
+++ b/Chord Generator 1-25-21.ipynb
@@ -644,18 +644,23 @@
     "            if seventh_chance == 2:\n",
     "                if key_choice == 1:\n",
     "                    print('{:-<15}'.format(numeral_choice + '7'), lead_sheet_list[numeral_choice] + '7')\n",
+    "                    sound = lead_sheet_list[numeral_choice] + '7'\n",
     "                else:\n",
     "                    print(numeral_choice + '7')\n",
     "            else:\n",
     "                if key_choice == 1:\n",
     "                    print('{:-<15}'.format(numeral_choice), lead_sheet_list[numeral_choice])\n",
+    "                    sound = lead_sheet_list[numeral_choice]\n",
     "                else:\n",
     "                    print(numeral_choice)\n",
     "        else:\n",
     "            if key_choice == 1:\n",
     "                print('{:-<15}'.format(numeral_choice), lead_sheet_list[numeral_choice])\n",
+    "                sound = lead_sheet_list[numeral_choice]\n",
     "            else:\n",
     "                print(numeral_choice)\n",
+    "        playsound(audio_list[first1(lead_sheet_list[numeral_choice])][sound])\n",
+    "        # picking out the next chord\n",
     "        if numeral_choice == 'I' or numeral_choice == 'i':\n",
     "            is_finished += 1\n",
     "        if modality_option.lower() == 'major':\n",
